Minor chanes and fixes.

--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -30,7 +30,7 @@
 
 <div class="mobile-products-container">
     <div *ngFor="let product of products" class="card">
-        <img [src]="getBase64ImageUrl(product.picturesData[0])" alt="Product image">
+        <img (click)="redirectToDetails(product.id)" [src]="getBase64ImageUrl(product.picturesData[0])" alt="Product image">
         <button class="add-to-cart-btn">
             Добави в количка
         </button>
