--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -29,12 +29,12 @@
       </div>
       <div class="custom-checkbox">
         <label for="airPurify">Air Purify:</label>
-        <input type="checkbox" id="airPurify" name="airPurify" [(ngModel)]="product.airPurify">
+        <input type="checkbox" id="airPurify" name="airPurify" [(ngModel)]="product.AirPurify">
         <span class="checkmark"></span>
       </div>
       <div class="custom-checkbox">
         <label for="petCompatibility">Pet Compatibility:</label>
-        <input type="checkbox" id="petCompatibility" name="petCompatibility" [(ngModel)]="product.petCompatibility">
+        <input type="checkbox" id="petCompatibility" name="petCompatibility" [(ngModel)]="product.PetCompatibility">
         <span class="checkmark"></span>
       </div>
       <div>
