--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -31,7 +31,7 @@
 <div class="mobile-products-container">
     <div *ngFor="let product of products" class="card">
         <img (click)="redirectToDetails(product.id)" [src]="getBase64ImageUrl(product.picturesData[0])" alt="Product image">
-        <button class="add-to-cart-btn">
+        <button (click)="addToCart(product)" class="add-to-cart-btn">
             Добави в количка
         </button>
         <div class="card-details-grid">
@@ -240,7 +240,7 @@
 <div class="products-container">
     <div *ngFor="let product of products" class="card">
         <img (click)="redirectToDetails(product.id)" [src]="getBase64ImageUrl(product.picturesData[0])" alt="Product image">
-        <button class="add-to-cart-btn">
+        <button (click)="addToCart(product)" class="add-to-cart-btn">
             Добави в количка
         </button>
         <div class="card-details-grid">
