--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -66,7 +66,7 @@
                 <h1>Описание</h1>
             </div>
             <p>
-                {{product.description}} <!-- Da dobavq additional description tuk-->
+                {{product.additionalDescription}}
             </p>
             <div class="description-footer">
                 <div>
@@ -74,7 +74,7 @@
                         Често Срещани Имена
                     </h1>
                     <p>
-                        Орхидея алабала, Орхдея нещо си
+                        {{product.commonName}}
                     </p>
                 </div>
 
@@ -83,7 +83,7 @@
                         Ботаническо Име
                     </h1>
                     <p>
-                        Orchidaceae
+                        {{product.botanicalName}}
                     </p>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                 <h1>Описание</h1>
             </div>
             <p>
-                {{product.description}}
+                {{product.additionalDescription}}
             </p>
             <div class="description-footer">
                 <div>
@@ -167,16 +167,16 @@
                         Често Срещани Имена
                     </h1>
                     <p>
-                        Орхидея алабала, Орхдея нещо си
+                        {{product.commonName}}
                     </p>
                 </div>
-    
+
                 <div>
                     <h1>
                         Ботаническо Име
                     </h1>
                     <p>
-                        Orchidaceae
+                        {{product.botanicalName}}
                     </p>
                 </div>
             </div>
