--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -74,12 +74,15 @@
 
     height: auto;
     width: 100vw;
-
-    padding-bottom: 20vh;
 }
+
+.last-container{
+    padding-bottom: 10vh;
+}
+
     .best-seller-container > h1{
         margin-top: 7vh;
-        margin-bottom: 3.5vh;
+        margin-bottom: 3vh;
         margin-left: calc(15vw + 1.2rem);
 
         align-self: start;
@@ -98,7 +101,7 @@
 
         flex-wrap: nowrap;
 
-        height: 55vh;
+        height: 60vh;
         width: 70vw;
     }
 
@@ -107,11 +110,39 @@
             padding: 1.2rem;
         }
 
+        .cards-container::-webkit-scrollbar {
+            width: 8px;
+          }
+          
+          .cards-container::-webkit-scrollbar-thumb {
+            background-color: #888;
+            border-radius: 4px;
+          }
+          
+          .cards-container::-webkit-scrollbar-track {
+            background-color: #f1f1f1;
+            border-radius: 4px;
+          }
+
             .card > img{
                 width: 100%;
-                height: 80%;
+                height: 85%;
                 object-fit: cover;
             }
+
+            .add-to-cart-btn {
+                /* Customize the styles of the "add-to-cart" button */
+                position: absolute;
+                bottom: 10px;
+                right: 10px;
+                padding: 0.5rem 1rem;
+                background-color: #25523B;
+                color: #ffffff;
+                border: none;
+                border-radius: 4px;
+                cursor: pointer;
+                transition: background-color 0.2s ease;
+              }
 
             .card-details-grid{
                 display: grid;
